add conda virtualenv

--- a/DataAnalysisVisualizationDataScience.ipynb
+++ b/DataAnalysisVisualizationDataScience.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
@@ -25,10 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -39,10 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
@@ -56,10 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -83,10 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -110,10 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -137,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -165,10 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -193,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -227,18 +209,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "I am not familiar with visualization within a web browser. I know **D3.js** which is JavaScript might be proper in doing this task. Here is [link](https://d3js.org/#introduction). "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Question C. Data Science - Tagging prediction\n",
     "In fact, I used the traditional **logistic regression model** for this new classification since the task is quite simple. After loading the data from the csv file, the first important step is to clean the text data by stripping it of all unwanted characters, for example HTML markup or punctuation. Then I process the text into tokens with **jieba**. After that, I vectorizer the text using **HashingVectorizer** from *scikit-learn*. Having set up all the complementary functions, I can start to train the logistic regression model with stochastic gradient descent.\n",
@@ -248,10 +226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -261,10 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -336,7 +310,7 @@
        "3893  77253   足球  【英超】曼城撼利物浦求反底　效率王辛尼下半季爆發成關鍵 與阿古路一同下半季發力的，不是倒戈利..."
       ]
      },
-     "execution_count": 242,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,10 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -423,7 +395,7 @@
        "3893  77253     2  【英超】曼城撼利物浦求反底　效率王辛尼下半季爆發成關鍵 與阿古路一同下半季發力的，不是倒戈利..."
       ]
      },
-     "execution_count": 243,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,10 +410,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Cleaning text data to remove HTML markup (</a>), emoticons and so on\n",
@@ -458,18 +428,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache /var/folders/34/h2dy2w_52v791hl1m4wrsft40000gn/T/jieba.cache\n",
+      "Loading model cost 0.989 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['你', ' ', '今天', ' ', '很漂亮', ' ', ':', ')', ':', '(', ':', ')']"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,10 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def stream_docs(df):\n",
@@ -505,10 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -517,7 +491,7 @@
        " 2)"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,10 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import HashingVectorizer\n",
@@ -547,17 +519,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:00:29\n"
+      "Total time elapsed: 00:00:33\n"
      ]
     }
    ],
@@ -577,10 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -599,9 +567,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -609,21 +576,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['【美國大選】選民倍增政治冷感依舊\\u3000亞裔死穴未解 今年中進行的一項研究顯示，66%的亞裔美國人與太平洋島民（統稱AAPI）支持民主黨。更重要的是，亞裔近年倒向民主黨的勢頭，從增幅來看可說是破紀錄。研究顯示，自2012年以來，表示支持民主黨的亞裔美國人，百分比由35%大幅升12個百分點，達到 <p>今年中進行的一項研究顯示，66%的亞裔美國人與太平洋島民（統稱AAPI）支持民主黨。更重要的是，亞裔近年倒向民主黨的勢頭，從增幅來看可說是破紀錄。研究顯示，自2012年以來，表示支持民主黨的亞裔美國人，百分比由35%大幅升12個百分點，達到47%。</p>\\r\\r\\n\\r\\r\\n<p>在上屆大選中，亞裔已是以73%對26%一面倒地支持奧巴馬，若結合這兩組數字來看，可推斷今年大選中，支持希拉里的亞裔選民比例，隨時有可能比上屆更高。</p>\\r\\r\\n\\r\\r\\n<p><strong>傳統上屬搖擺選民</strong></p>\\r\\r\\n\\r\\r\\n<p>調查顯示，年輕人（18至34歲）尤其傾向支持民主黨，達到77%，遠高於傾向共和黨的12％；至於35至64歲人士，以及65歲以上人士這兩個年齡組別，也是以支持民主黨為主（超過六成），比支持共和黨的三成半左右數字高出一大截。</p> <p>值得留意的是，介乎18至34歲的年輕亞裔，大多數都是在美國本土出生。這亦令人關注到，亞裔支持民主黨的大趨勢，未來會否變得愈益強烈，畢竟歷史上亞裔傾向支持民主黨，也只是這10多年的事。在1992年美國大選中，支持克林頓的就只有大約三成。</p>\\r\\r\\n\\r\\r\\n<p>其實亞裔美國人傳統上屬於所謂「搖擺選民」，長期以來沒有明確政黨偏向，結果是投票給兩大黨的比例都差不多，這導致兩大黨覺得亞裔票源是雞肋。亞裔票源分散，一大原因是亞裔本身就是一個相當混合的選舉群體，包羅了華裔、印裔、菲裔、韓裔、越裔等生活模式和政治取態都截然不同的族裔。雖然華人是亞裔中一個重要的構成部分，但實際也不過佔亞裔美國人口的23%左右。</p>\\r\\r\\n\\r\\r\\n<p><strong>投票率遜非裔拉丁裔</strong></p>\\r\\r\\n\\r\\r\\n<p>為了爭加亞裔在選舉政治中的本錢，一些亞裔人士在1990年代中特以成立了民間組織「80-20促進會」，盼能夠團結亞裔美國人中至少80%的選民支持某一政黨的總統候選人，以確保亞裔的聲音不被候選人忽視。從近年的趨勢來看，亞裔的政黨偏向性，無疑是變得較為鮮明了，不過未有改變的是，亞裔投票率仍舊是出了名的低。</p> <p>2012年大選中，亞裔投票率只有47.3%，不但低於拉丁裔選民48%的投票率，更遠低於非裔選民的66%和非拉丁裔白人選民的64%。在同年的各項選舉中，37%的亞裔選民表示，他們因為「太忙」而沒時間投票。投票率低導致了亞裔美國人在關鍵選舉群體中的排名仍然很後，這也自然不利亞裔吸引兩大黨候選人的注視和「關照」。</p> <p><strong>你想看更多精彩的深度文章嗎？請購買<a href=\"https://subscribe.hk01.com/landing.php\">今期《香港01》周報</a></strong><strong>，或點擊此處：<a href=\"https://subscribe.hk01.com/offer.php\">成為我們的訂戶</a></strong><strong>。</strong></p>'] 美國大選\n",
+      "['【歐聯】曼城反負摩納哥\\u3000防線形同虛設\\u3000哥帥首16強止步（有片） 摩納哥收復首回合落後3︰5的劣勢，主場以3︰1挫曼城，總比數6︰6打和憑作客入球優惠晉級8強，這也是曼城主帥哥迪奧拿執教生涯首次於歐聯16強止步。 需要最少入兩球才有機會晉級的摩納哥未有起用法卡奧或摩天奴擔正，一班年輕新星甫開賽便極之進取，8分鐘貝拿度施華左路傳中，由突破越位的基利安洛天射入近3場第4球。左路成為曼城死症，29分鐘班捷文文迪再於類似位置傳中，通天老倌法賓奴泰華利斯撞射入 <p style=\"text-align: justify;\">需要最少入兩球才有機會晉級的摩納哥未有起用法卡奧或摩天奴擔正，一班年輕新星甫開賽便極之進取，8分鐘貝拿度施華左路傳中，由突破越位的基利安洛天射入近3場第4球。左路成為曼城死症，29分鐘班捷文文迪再於類似位置傳中，通天老倌法賓奴泰華利斯撞射入網，令摩納哥在總比數追成5︰5，若保持賽果至完場將晉級。</p>\\r\\r\\n\\r\\r\\n<p style=\"text-align: justify;\"><strong>曼城右閘位成漏洞</strong></p>\\r\\r\\n\\r\\r\\n<p style=\"text-align: justify;\">上半場起腳未嘗中框的曼城下半場略有改善，前鋒阿古路多次近門機會但都未能轉化為入球，至71分鐘終憑利萊辛尼執死雞，再次在總比數領前。可是曼城防守再次走漏人，被摩納哥的泰莫爾巴卡約高接應罰球頂入。曼城換入前鋒伊恩拿祖仍無力再入球，令李斯特城成為8強唯一英格蘭球會。</p> <p style=\"text-align: justify;\"><strong>李斯特城成8強唯一英格蘭代表</strong></p>\\r\\r\\n\\r\\r\\n<p style=\"text-align: justify;\">首次16強出局的哥迪奧拿認為死因是開局太差以及死球是致命傷︰「下半場做得很好，但上半場則忘記了。我們未能踢出應有水平，要好好學習，始終這支球隊欠缺經驗。出局是因為下半場有機會但未能把握。」摩納哥主帥渣甸則認為晉級實至名歸︰「我們防線壓前，前場表現也很好。下半場對手適應了，以兩個前鋒施壓才能減少曼城控球機會。」歐聯8強抽籤將在3月17日（周五）晚上舉行。</p>'] 足球\n",
       "------------------------------\n",
-      "Prediction: 美國大選\n",
-      "Probability: 73.08%\n"
+      "Prediction: 足球\n",
+      "Probability: 95.89%\n"
      ]
     }
    ],
    "source": [
     "# See the result of remaining training data one by one. You can run this multiply times\n",
     "X_test, y_test = get_minibatch(doc_stream, size=1)\n",
-    "print(X_test, label[y_test[0]])\n",
+    "print(X_test, inv_class_mapping[y_test[0]])\n",
     "print('-'*30)\n",
     "X = vect.transform(X_test)\n",
     "label = inv_class_mapping\n",
-    "print('Prediction: %s\\nProbability: %.2f%%' % (label[clf.predict(X)[0]], np.max(clf.predict_proba(X))*100))"
+    "print('Prediction: %s\\nProbability: %.2f%%' % (inv_class_mapping[clf.predict(X)[0]], np.max(clf.predict_proba(X))*100))"
    ]
   },
   {
@@ -635,10 +602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_test = pd.read_csv('./offsite-test-material/offsite-tagging-test-set.csv')"
@@ -646,10 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -715,7 +678,7 @@
        "973  94324  【傑志對熱刺．來稿】睇波睇到開party咁先至過癮 剛過去的周末，香港刮起一股足球熱。先是上..."
       ]
      },
-     "execution_count": 281,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,10 +690,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -753,10 +714,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add tags column to dataframe\n",
@@ -765,10 +724,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pd.DataFrame(df_test).to_csv('./offsite-test-set-with-tags.csv', index=False)"
@@ -776,10 +733,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -851,7 +806,7 @@
        "973  94324   足球  【傑志對熱刺．來稿】睇波睇到開party咁先至過癮 剛過去的周末，香港刮起一股足球熱。先是上..."
       ]
      },
-     "execution_count": 316,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
